# fastapi-security

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: cd.yml  ci.yml  codecov.yml  docs.yml  tagged-release.yml
docs/: index.md
examples/app1/: README.md  app.py  db.py  settings.py
fastapi_security/: __init__.py  _optional_dependencies.py  api.py  basic.py  cli.py  dependencies.py  entities.py  exceptions.py  gendigest.py  jwt.py  oauth2.py  oidc.py  permissions.py  registry.py  schemes.py
search/: search_index.json
tests/: conftest.py  jwks_helpers.py  test_basic_auth.py  test_oauth2.py  test_permissions.py  test_user_data.py
tests/examples/: helpers.py  test_app1.py
tests/helpers/: jwks.py  oidc.py
tests/integration/: test_api.py  test_basic_auth.py  test_cli.py  test_oauth2.py  test_oidc.py  test_permission_overrides.py  test_permissions.py  test_user_data.py  test_www_authenticate.py
tests/unit/: test_entities.py  test_oauth2.py  test_oidc.py
